--- a/export/verdant.css
+++ b/export/verdant.css
@@ -67,6 +67,14 @@
     }
 */
 
-
+.single_card {
+    width: 200px;
+}
+.item {
+    width: 56px;
+    height: 56px;
+    position: absolute;
+    background-image: url('img/items.png');
+}
 
 
