--- a/export/verdant.css
+++ b/export/verdant.css
@@ -75,7 +75,7 @@
     width: 56px;
     height: 56px;
     position: relative;
-    background-image: url('img/items.png');
+    background-image: url('img/item.png');
 }
 
 
